--- a/ui-next/package.json
+++ b/ui-next/package.json
@@ -4,6 +4,7 @@
   "description": "Modern UI layer for DevOps Monitoring in a Box",
   "private": true,
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
