--- a/ui-next/package.json
+++ b/ui-next/package.json
@@ -31,7 +31,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.6.5",
     "bcryptjs": "^3.0.2",
-    "nodemailer": "^6.9.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "framer-motion": "^10.18.0",
@@ -40,6 +39,7 @@
     "next": "^14.2.32",
     "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.7",
     "prisma": "^6.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,6 +48,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.12.1",
     "@types/node": "^20.10.8",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.47",
