devops-monitoring: docker: Add Docker deployment files and documentation
- Introduced `DOCKER_README.md` for a comprehensive guide on deploying the DevOps Monitoring Dashboard using Docker, including quick start options and access points for services.
- Added `docker-compose.env.example` for environment variable configuration, facilitating user setup for Docker Hub and site settings.
- Updated `docker-compose.yml` to streamline service configuration and ensure proper environment variable usage.
- Created a `Dockerfile` for multi-stage builds, optimizing the Next.js application for production.
- Implemented `start-full-stack.sh` script to simplify the startup process for the complete monitoring stack.
- Established a GitHub Actions workflow for automated Docker image building and publishing upon version tag pushes.
- Developed `DOCKER_DEPLOYMENT_GUIDE.md` detailing the complete Docker deployment setup and automated publishing process.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,19 +123,16 @@ services:
 
   # DevOps Monitor UI - Modern Next.js web dashboard
   devops-monitor-ui:
-    build:
-      context: ./ui-next
-      dockerfile: Dockerfile
+    image: ${DOCKERHUB_USERNAME:-yourusername}/devops-monitoring-dashboard:latest
     container_name: devops-monitor-ui
     ports:
-      - "4000:3000"
-    volumes:
-      - ./ui-next:/app
-      - /app/node_modules
-      - /app/.next
+      - "3000:3000"
     environment:
       - NODE_ENV=production
       - PORT=3000
+      - SITE_NAME=${SITE_NAME:-DevOps Monitoring Dashboard}
+      - SITE_URL=${SITE_URL:-http://localhost:3000}
+      - SITE_DESCRIPTION=${SITE_DESCRIPTION:-Comprehensive DevOps monitoring solution}
     restart: unless-stopped
     networks:
       - monitoring
