devops-monitoring: docker: Enhance GitHub Actions workflow for validating Git references
- Updated the Docker publish workflow to include validation for Git references, ensuring that specified tags or branches exist before proceeding with the build.
- Improved the checkout step to handle cases where the tag input is empty or 'latest', providing clearer feedback on the current commit and branch.
- Added detailed logging for available tags and branches if the specified reference is not found, enhancing troubleshooting capabilities.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -48,7 +48,31 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.event.inputs.tag != 'latest' && github.event.inputs.tag || github.ref }}
+        ref: ${{ github.event.inputs.tag != 'latest' && github.event.inputs.tag != '' && github.event.inputs.tag || github.ref }}
+        fetch-depth: 0
+      
+    - name: Validate Git reference
+      run: |
+        echo "🔍 Validating Git reference..."
+        if [ "${{ github.event.inputs.tag }}" != "latest" ] && [ "${{ github.event.inputs.tag }}" != "" ]; then
+          echo "📋 Checking if tag/branch '${{ github.event.inputs.tag }}' exists..."
+          if git rev-parse --verify "${{ github.event.inputs.tag }}" >/dev/null 2>&1; then
+            echo "✅ Git reference '${{ github.event.inputs.tag }}' found"
+            echo "📍 Current commit: $(git rev-parse HEAD)"
+            echo "🏷️  Current branch: $(git branch --show-current)"
+          else
+            echo "❌ Git reference '${{ github.event.inputs.tag }}' not found"
+            echo "📋 Available tags:"
+            git tag --list | head -10
+            echo "📋 Available branches:"
+            git branch -r | head -10
+            exit 1
+          fi
+        else
+          echo "✅ Using current branch/commit"
+          echo "📍 Current commit: $(git rev-parse HEAD)"
+          echo "🏷️  Current branch: $(git branch --show-current)"
+        fi
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
