--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,12 +2,15 @@ name: Docker Build and Publish
 
 on:
   push:
+    branches:
+      - main
+      - master
     tags:
-      - 'v*'  # Triggers on version tags like v1.0.0, v2.1.3, etc.
+      - 'v*'  # Still support version tags like v1.0.0, v2.1.3, etc.
   workflow_dispatch:
     inputs:
-      tag:
-        description: 'Git tag or version (e.g., v1.0.0)'
+      commit_sha:
+        description: 'Git commit SHA or branch name (e.g., abc1234, main, latest)'
         required: true
         default: 'latest'
         type: string
@@ -48,30 +51,36 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.event.inputs.tag != 'latest' && github.event.inputs.tag != '' && github.event.inputs.tag || github.ref }}
+        ref: ${{ github.event.inputs.commit_sha != 'latest' && github.event.inputs.commit_sha != '' && github.event.inputs.commit_sha || github.ref }}
         fetch-depth: 0
       
     - name: Validate Git reference
       run: |
         echo "🔍 Validating Git reference..."
-        if [ "${{ github.event.inputs.tag }}" != "latest" ] && [ "${{ github.event.inputs.tag }}" != "" ]; then
-          echo "📋 Checking if tag/branch '${{ github.event.inputs.tag }}' exists..."
-          if git rev-parse --verify "${{ github.event.inputs.tag }}" >/dev/null 2>&1; then
-            echo "✅ Git reference '${{ github.event.inputs.tag }}' found"
+        if [ "${{ github.event.inputs.commit_sha }}" != "latest" ] && [ "${{ github.event.inputs.commit_sha }}" != "" ]; then
+          echo "📋 Checking if commit/branch '${{ github.event.inputs.commit_sha }}' exists..."
+          if git rev-parse --verify "${{ github.event.inputs.commit_sha }}" >/dev/null 2>&1; then
+            echo "✅ Git reference '${{ github.event.inputs.commit_sha }}' found"
             echo "📍 Current commit: $(git rev-parse HEAD)"
             echo "🏷️  Current branch: $(git branch --show-current)"
+            echo "📅 Commit date: $(git log -1 --format=%ci)"
+            echo "👤 Commit author: $(git log -1 --format=%an)"
+            echo "💬 Commit message: $(git log -1 --format=%s)"
           else
-            echo "❌ Git reference '${{ github.event.inputs.tag }}' not found"
-            echo "📋 Available tags:"
-            git tag --list | head -10
+            echo "❌ Git reference '${{ github.event.inputs.commit_sha }}' not found"
             echo "📋 Available branches:"
             git branch -r | head -10
+            echo "📋 Recent commits:"
+            git log --oneline -10
             exit 1
           fi
         else
           echo "✅ Using current branch/commit"
           echo "📍 Current commit: $(git rev-parse HEAD)"
           echo "🏷️  Current branch: $(git branch --show-current)"
+          echo "📅 Commit date: $(git log -1 --format=%ci)"
+          echo "👤 Commit author: $(git log -1 --format=%an)"
+          echo "💬 Commit message: $(git log -1 --format=%s)"
         fi
       
     - name: Set up Docker Buildx
@@ -117,7 +126,7 @@ jobs:
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "| Field | Value |" >> $GITHUB_STEP_SUMMARY
         echo "|-------|-------|" >> $GITHUB_STEP_SUMMARY
-        echo "| **Git Tag** | \`${{ github.event.inputs.tag }}\` |" >> $GITHUB_STEP_SUMMARY
+        echo "| **Git Reference** | \`${{ github.event.inputs.commit_sha }}\` |" >> $GITHUB_STEP_SUMMARY
         echo "| **Image Version** | \`${{ github.event.inputs.image_version }}\` |" >> $GITHUB_STEP_SUMMARY
         echo "| **Build Platform** | \`${{ github.event.inputs.build_platform }}\` |" >> $GITHUB_STEP_SUMMARY
         echo "| **Push to Registry** | \`${{ github.event.inputs.push_to_registry }}\` |" >> $GITHUB_STEP_SUMMARY
@@ -145,6 +154,7 @@ jobs:
         echo "📦 Image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
         echo "🏷️  Tags: ${{ steps.meta.outputs.tags }}"
         echo "🔧 Platform: ${{ github.event.inputs.build_platform }}"
+        echo "📋 Git Reference: ${{ github.event.inputs.commit_sha }}"
         if [ "${{ github.event.inputs.push_to_registry }}" != "false" ]; then
           echo "📤 Pushed to Docker Hub registry"
         else
