devops-monitoring: refactor: restructure devops-monitor.sh and move to scripts directory
- Refactored the main management script, renaming it to devops-monitor.sh and relocating it to the scripts/ directory for better organization.
- Updated the script to serve as a wrapper that calls the actual management functions, improving clarity and maintainability.
- Removed deprecated functions and streamlined the script to focus on essential commands for managing the monitoring stack.
- Updated README and documentation to reflect the new script structure and usage instructions.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,7 +32,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/devops-monitoring-dashboard
+  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/devops-monitoring-box
 
 jobs:
   build-and-push:
