devops-monitoring: feat: update environment configuration and enhance site settings
- Changed DATABASE_URL to use a local SQLite database for development.
- Updated NEXTAUTH_URL to reflect the new port for local development.
- Added new site configuration variables: SITE_NAME, SITE_URL, and SITE_DESCRIPTION for better site management.
- Enhanced middleware to include public files in the routing configuration.
- Updated package.json with new database management scripts and added TypeScript support.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/ui-next/env.example
+++ b/ui-next/env.example
@@ -1,9 +1,14 @@
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/devops_monitoring"
+DATABASE_URL="file:./dev.db"
 
 # NextAuth
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:4000"
 NEXTAUTH_SECRET="your-secret-key-here"
+
+# Site Configuration
+SITE_NAME="DevOps Monitoring Dashboard"
+SITE_URL="http://localhost:4000"
+SITE_DESCRIPTION="Comprehensive DevOps monitoring solution"
 
 # OAuth Providers (optional)
 GOOGLE_CLIENT_ID=""
@@ -17,3 +22,12 @@ EMAIL_SERVER_PORT=""
 EMAIL_SERVER_USER=""
 EMAIL_SERVER_PASSWORD=""
 EMAIL_FROM=""
+
+# Monitoring Services (for development)
+PROMETHEUS_URL="http://localhost:9090"
+GRAFANA_URL="http://localhost:3000"
+LOKI_URL="http://localhost:3100"
+ALERTMANAGER_URL="http://localhost:9093"
+
+# Node Environment
+NODE_ENV="development"
