devops-monitoring: docker: update Dockerfile to skip scripts during npm install
- Modified the Dockerfile to include the `--ignore-scripts` flag in the `npm ci` command to prevent script execution during installation, ensuring compatibility with the Prisma client generation process.
- This change enhances the build process by avoiding potential issues related to missing schema files during installation.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/ui-next/Dockerfile
+++ b/ui-next/Dockerfile
@@ -9,9 +9,10 @@ WORKDIR /app
 
 # Install dependencies based on the preferred package manager
 # Use BuildKit cache mount for faster rebuilds
+# Skip scripts during install since postinstall (prisma generate) needs schema file
 COPY package.json package-lock.json* ./
 RUN --mount=type=cache,target=/root/.npm \
-    npm ci --prefer-offline --no-audit
+    npm ci --prefer-offline --no-audit --ignore-scripts
 
 # Rebuild the source code only when needed
 FROM base AS builder
