devops-monitoring: refactor: enhance service configuration and update environment variables
- Introduced a centralized service configuration manager to streamline service discovery and connection management for Prometheus, Grafana, Loki, and Alertmanager.
- Updated environment variable handling for monitoring services, including new options for retries and timeouts.
- Refactored API classes to utilize the new HttpClient for consistent error handling and retry logic.
- Adjusted default URLs and configurations for local development, changing references from port 3000 to 4000.
- Enhanced health check implementations and service URL retrieval for improved reliability and maintainability.

Signed-off-by: NotHarshhaa <reddyharshhaa12@gmail.com>

--- a/ui-next/env.example
+++ b/ui-next/env.example
@@ -23,11 +23,46 @@ EMAIL_SERVER_USER=""
 EMAIL_SERVER_PASSWORD=""
 EMAIL_FROM=""
 
-# Monitoring Services (for development)
-PROMETHEUS_URL="http://localhost:9090"
-GRAFANA_URL="http://localhost:3000"
-LOKI_URL="http://localhost:3100"
-ALERTMANAGER_URL="http://localhost:9093"
+# Monitoring Services Configuration
+# Use NEXT_PUBLIC_ prefix for client-side accessible URLs
+# For Docker/containerized environments, use service names (e.g., http://prometheus:9090)
+
+# Prometheus Configuration
+NEXT_PUBLIC_PROMETHEUS_URL="http://localhost:9090"
+PROMETHEUS_ENABLED="true"
+PROMETHEUS_TIMEOUT="30000"
+PROMETHEUS_RETRIES="3"
+PROMETHEUS_RETRY_DELAY="1000"
+
+# Grafana Configuration
+NEXT_PUBLIC_GRAFANA_URL="http://localhost:3000"
+GRAFANA_ENABLED="true"
+GRAFANA_TIMEOUT="30000"
+GRAFANA_RETRIES="3"
+GRAFANA_RETRY_DELAY="1000"
+
+# Loki Configuration
+NEXT_PUBLIC_LOKI_URL="http://localhost:3100"
+LOKI_ENABLED="true"
+LOKI_TIMEOUT="30000"
+LOKI_RETRIES="3"
+LOKI_RETRY_DELAY="1000"
+
+# Alertmanager Configuration
+NEXT_PUBLIC_ALERTMANAGER_URL="http://localhost:9093"
+ALERTMANAGER_ENABLED="true"
+ALERTMANAGER_TIMEOUT="30000"
+ALERTMANAGER_RETRIES="3"
+ALERTMANAGER_RETRY_DELAY="1000"
+
+# Optional: Node Exporter & cAdvisor
+NEXT_PUBLIC_NODE_EXPORTER_URL="http://localhost:9100"
+NODE_EXPORTER_ENABLED="false"
+NEXT_PUBLIC_CADVISOR_URL="http://localhost:8080"
+CADVISOR_ENABLED="false"
+
+# Docker Environment Detection (set to 'true' when running in Docker)
+DOCKER_ENV="false"
 
 # Node Environment
 NODE_ENV="development"
